--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
             console.log(data);
 
             var xhr = new XMLHttpRequest();
-            //var proxyURL = 'https://cors-anywhere.herokuapp.com';
-            //xhr.open("POST", proxyURL + '/' + url, true);
-            xhr.open("POST", url, true);
+            var proxyURL = 'https://cors-anywhere.herokuapp.com';
+            xhr.open("POST", proxyURL + '/' + url, true);
+            //xhr.open("POST", url, true);
             xhr.setRequestHeader("Content-Type", "application/json; charset=utf-8");
             xhr.setRequestHeader("webhook_key", webhook_key);
             xhr.timeout = 180000; // 180 seconds
